@@ -1,3 +1,9 @@
+Mon Mar  8 16:07:11 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* src/compression.c (decompress): Error out if decompression program
+	  not found, as a temporary workaround for poor detection in
+	  configure.
+
 Mon Mar  8 15:59:29 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* src/manp.c (get_catpath): Use xstrdup and strappend rather than
